Noticed issues right after switching away frow medie query 768, fixed spacing around content and contact info.

--- a/css/index.css
+++ b/css/index.css
@@ -210,6 +210,23 @@ footer {
     .cta {
         justify-content: space-around;
     }
+
+    .main-content .top-content{
+        width: 100%;
+    }
+    .main-content .top-content .text-content{
+        width: 45%;
+    }
+    .main-content .bottom-content{
+        width: 100%;
+    }
+    .main-content .bottom-content .text-content{
+        width: 30%;
+    }
+    .contact{
+        margin: 2%;
+    }
+
     .middle-img{
         width: 100%;
     }
